feat:update microservice.md

--- a/_posts/2017-10-27-微服务.md
+++ b/_posts/2017-10-27-微服务.md
@@ -96,7 +96,7 @@ ZooKeeper 主要提供的功能：
 包含接口定义 KafkaProducerService.Iface，以及服务调用的底层通信细节。
 包括客户端的调用逻辑 KafkaProducerService.Client 以及服务端的处理逻辑 KafkaProducerService.Processor。
 
-3. 创建一个声明所有 thrift 接口的 maven 项目，取名`thrift-interface`，在 pom.xml 文件中添加依赖
+3. 创建一个声明所有 thrift 接口的 maven 项目，取名`thrift-interface`，在 `pom.xml` 文件中添加依赖
 
 ```
 <dependency>
@@ -115,7 +115,7 @@ ZooKeeper 主要提供的功能：
 ```
 
 #### 定义 Thrift 和 Zookeeper 服务工厂
-1. 创建 maven 项目，取名`thrift-zookeeper-factory`，在 pom.xml 文件中添加依赖
+1. 创建 maven 项目，取名`thrift-zookeeper-factory`，在 `pom.xml` 文件中添加依赖
    
 ```
 <!-- thrift -->
@@ -355,6 +355,83 @@ public class ZooKeeperServerManager {
 
 ```
 
+#### 定义 Kafka 生产日志的微服务
+1. 创建 Spring boot 项目，取名`kafka-producer-server`，在 `pom.xml` 文件中添加依赖
+   
+```
+<parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>1.3.3.RELEASE</version>
+    <relativePath/>
+</parent>
+
+<dependencies>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+
+    <!-- thrift -->
+    <dependency>
+        <groupId>org.apache.thrift</groupId>
+        <artifactId>libthrift</artifactId>
+        <version>0.9.3</version>
+    </dependency>
+
+    <!-- zookeeper -->
+    <dependency>
+        <groupId>org.apache.zookeeper</groupId>
+        <artifactId>zookeeper</artifactId>
+        <version>3.4.6</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.helix</groupId>
+        <artifactId>helix-core</artifactId>
+        <version>0.6.4</version>
+    </dependency>
+
+    <!-- kafka -->
+    <dependency>
+        <groupId>org.apache.kafka</groupId>
+        <artifactId>kafka_2.10</artifactId>
+        <version>0.9.0.1</version>
+    </dependency>
+
+    <!-- thrift 接口项目 -->
+    <dependency>
+        <groupId>com.lfzhu</groupId>
+        <artifactId>thrift-interface</artifactId>
+        <version>0.0.1</version>
+    </dependency>
+    
+    <!-- thrift zookeeper  服务工厂项目-->
+    <dependency>
+        <groupId>com.lfzhu</groupId>
+        <artifactId>thrift-zookeeper-factory</artifactId>
+        <version>0.0.1</version>
+    </dependency>
+</dependencies>
+```
+
+2. 在 `application.properties` 文件中添加 zookeeper 和 kafka 的属性配置
+```
+#zookeeper
+zookeeper.service.name=kafka-producer-thrift-service
+zookeeper.service.port=7901
+zookeeper.server.list=127.0.0.1:2181
+#kafka
+bootstrap.servers=127.0.0.1:9092
+client.id=FasLogProducer
+```
+
+3. 
+
+
 
 # 参考
 [Building Apache Thrift on CentOS](https://thrift.apache.org/docs/install/centos)
@@ -370,3 +447,5 @@ public class ZooKeeperServerManager {
 [](http://www.cnblogs.com/skyblog/p/5535418.html)
 
 [Apache Helix简介](http://blog.csdn.net/oopsoom/article/details/47416575)
+
+[Kafka快速入门](http://colobu.com/2014/08/06/kafka-quickstart/)
