feat:update microservice.md

--- a/_posts/2017-10-27-微服务.md
+++ b/_posts/2017-10-27-微服务.md
@@ -68,7 +68,8 @@ ZooKeeper 主要提供的功能：
 
 本地如果想要搭建一个 Zookeeper 服务，可以使用 Docker 快速启动。我用的是 [wurstmeister/zookeeper](https://hub.docker.com/r/wurstmeister/zookeeper/) 这个镜像。
 
-# 微服务案例[后端应用在`filter`中通过`kafka`生产`http`报文日志，用于行为分析]
+# 微服务案例
+后端应用在 filter 中通过 kafka 生产 http 报文日志，用于行为分析。
 
 #### 使用 Thrift 定义接口协议
 1. 定义接口协议文件 `KafkaProducerService.thrift`
