feat:update microservice.md

--- a/_posts/2017-10-27-微服务.md
+++ b/_posts/2017-10-27-微服务.md
@@ -72,7 +72,7 @@ ZooKeeper 主要提供的功能：
 后端应用在 filter 中通过 kafka 生产 http 报文日志，用于行为分析。
 
 #### 使用 Thrift 定义接口协议
-1. 定义接口协议文件 `KafkaProducerService.thrift`
+1.定义接口协议文件 `KafkaProducerService.thrift`
 
  ```
  namespace java kafka.producer.service
@@ -87,7 +87,7 @@ ZooKeeper 主要提供的功能：
  }
  ```
  
-2. 终端进入文件所在目录,执行命令:
+2.终端进入文件所在目录,执行命令:
  
  ```
  thrift -r -gen java KafkaProducerService.thrift
@@ -97,7 +97,7 @@ ZooKeeper 主要提供的功能：
 包含接口定义 KafkaProducerService.Iface，以及服务调用的底层通信细节。
 包括客户端的调用逻辑 KafkaProducerService.Client 以及服务端的处理逻辑 KafkaProducerService.Processor。
 
-3. 创建一个声明所有 thrift 接口的 maven 项目，取名`thrift-interface`，在 `pom.xml` 文件中添加依赖
+3.创建一个声明所有 thrift 接口的 maven 项目，取名`thrift-interface`，在 `pom.xml` 文件中添加依赖
 
 ```
 <dependency>
@@ -109,14 +109,15 @@ ZooKeeper 主要提供的功能：
 
 并且将 gen-java 的目录下的文件放到项目中。
 
-4. 打包，上传到本地私服 nexus 中。
+4.打包，上传到本地私服 nexus 中。
+
 ```
     $ maven package
     $ mvn deploy:deploy-file -DgroupId=com.lfzhu -DartifactId=thrift-interface -Dversion=0.0.1 -Dpackaging=jar -Dfile=target/thrift-interface-0.0.1.jar -DpomFile=pom.xml -Durl=http://host:port/repository/maven-releases -DrepositoryId=nexus
 ```
 
 #### 定义 Thrift 和 Zookeeper 服务工厂
-1. 创建 maven 项目，取名`thrift-zookeeper-factory`，在 `pom.xml` 文件中添加依赖
+1.创建 maven 项目，取名`thrift-zookeeper-factory`，在 `pom.xml` 文件中添加依赖
    
 ```
 <!-- thrift -->
@@ -139,7 +140,7 @@ ZooKeeper 主要提供的功能：
 </dependency>
 ```
 
-2. 定义 Thrift 客户端管理器
+2.定义 Thrift 客户端管理器
 
 ```
 public class MyTServiceClient extends TServiceClient {
@@ -150,7 +151,7 @@ public class MyTServiceClient extends TServiceClient {
 }
 ```
 
-3. 定义 Thrift 服务端管理器
+3.定义 Thrift 服务端管理器
 
 ```
 public class ThriftServerManager {
@@ -189,7 +190,7 @@ public class ThriftServerManager {
     }
 }
 ```
-4. 定义 Zookeeper 客户端管理器
+4.定义 Zookeeper 客户端管理器
 
 ```
 public class ZooKeeperClientManager {
@@ -297,7 +298,8 @@ public class ZooKeeperClientManager {
     }
 }
 ```
-5. 定义 Zookeeper 服务端管理器
+
+5.定义 Zookeeper 服务端管理器
 
 ```
 public class ZooKeeperServerManager {
@@ -349,15 +351,15 @@ public class ZooKeeperServerManager {
 }
 ```
 
-6. 打包，上传到本地私服 nexus 中。
+6.打包，上传到本地私服 nexus 中。
+
 ```
     $ maven package
     $ mvn deploy:deploy-file -DgroupId=com.lfzhu -DartifactId=thrift-zookeeper-factory -Dversion=0.0.1 -Dpackaging=jar -Dfile=target/thrift-zookeeper-factory-0.0.1.jar -DpomFile=pom.xml -Durl=http://host:port/repository/maven-releases -DrepositoryId=nexus
-
 ```
 
 #### 定义 Kafka 生产日志的微服务
-1. 创建 Spring boot 项目，取名`kafka-producer-server`，在 `pom.xml` 文件中添加依赖
+1.创建 Spring boot 项目，取名`kafka-producer-server`，在 `pom.xml` 文件中添加依赖
    
 ```
 <parent>
@@ -419,7 +421,7 @@ public class ZooKeeperServerManager {
 </dependencies>
 ```
 
-2. 在 `application.properties` 文件中添加 zookeeper 和 kafka 的属性配置
+2.在 `application.properties` 文件中添加 zookeeper 和 kafka 的属性配置
 ```
 #zookeeper
 zookeeper.service.name=kafka-producer-thrift-service
@@ -430,8 +432,33 @@ bootstrap.servers=127.0.0.1:9092
 client.id=FasLogProducer
 ```
 
-3. 
+3.初始化 ZooKeeper 配置工厂
 
+```
+@Configuration
+public class ZooKeeperConfigFactory {
+
+    @Value("${zookeeper.service.name}")
+    private String serviceName;
+
+    @Value("${zookeeper.service.port}")
+    private String servicePort;
+
+    @Value("${zookeeper.server.list}")
+    private String zookeeperList;
+
+    @PostConstruct
+    public void init() {
+        int port = Integer.valueOf(servicePort);
+        KafkaProducerService.Processor processor =
+            new KafkaProducerService.Processor(new KafkaProducerServiceImpl());
+        ThriftServerManager thriftServerManager = new ThriftServerManager(processor, port);
+        thriftServerManager.publishThriftServiceInThreadPool();
+        ZooKeeperServerManager server = new ZooKeeperServerManager(serviceName, zookeeperList);
+        server.registThriftServiceToZookeeperInThreadPool();
+    }
+}
+```
 
 
 # 参考
