feat:update microservice.md

--- a/_posts/2017-10-27-微服务.md
+++ b/_posts/2017-10-27-微服务.md
@@ -69,7 +69,7 @@ ZooKeeper 主要提供的功能：
 本地如果想要搭建一个 Zookeeper 服务，可以使用 Docker 快速启动。我用的是 [wurstmeister/zookeeper](https://hub.docker.com/r/wurstmeister/zookeeper/) 这个镜像。
 
 # 微服务案例
-后端应用在 filter 中通过 kafka 生产 http 报文日志，用于行为分析。
+后端应用在 filter 中通过 kafka 生产者模式记录 http 报文日志，用于行为分析。
 
 #### 使用 Thrift 定义接口协议
 1.定义接口协议文件 `KafkaProducerService.thrift`
@@ -459,6 +459,123 @@ public class ZooKeeperConfigFactory {
     }
 }
 ```
+
+4.定义 Kafka 生产者回调类
+
+```
+class KafkaCallBack implements Callback {
+
+    public Logger logger = LoggerFactory.getLogger(KafkaCallBack.class);
+
+
+    private Long startTime;
+    private Long key;
+    private String message;
+
+    public KafkaCallBack(Long startTime, Long key, String message) {
+        this.startTime = startTime;
+        this.key = key;
+        this.message = message;
+    }
+
+    public void onCompletion(RecordMetadata metadata, Exception exception) {
+        long elapsedTime = System.currentTimeMillis() - startTime;
+        if (metadata != null) {
+            logger.debug("message(" + key + ", " + message + ") sent to partition(" + metadata.partition()
+                    + "), " + "offset(" + metadata.offset() + ") in " + elapsedTime + " ms");
+        } else {
+            logger.error("produce message failed,cause by [" + exception.getMessage() + "]");
+        }
+    }
+}
+```
+
+5.初始化 Kafka 生产者配置工厂
+
+```
+@Component
+public class KafkaFactory {
+
+    @Value("${bootstrap.servers}")
+    private String servers;
+
+    @Value("${client.id}")
+    private String clientId;
+
+    private static org.apache.kafka.clients.producer.KafkaProducer producer;
+
+    @PostConstruct
+    public void init() {
+        initKafkaProducer();
+    }
+
+    private void initKafkaProducer() {
+        Properties props = new Properties();
+        props.put("bootstrap.servers", servers);
+        props.put("client.id", clientId);
+        props.put("key.serializer", "org.apache.kafka.common.serialization.LongSerializer");
+        props.put("value.serializer", "org.apache.kafka.common.serialization.StringSerializer");
+        this.producer = new org.apache.kafka.clients.producer.KafkaProducer<Long, String>(props);
+    }
+
+    public static KafkaProducer getProducer() {
+        return producer;
+    }
+
+}
+```
+
+6.定义 Kafka 生产日志的服务类，实现之前通过 Thrift 定义的接口协议
+
+```
+public class KafkaProducerServiceImpl implements KafkaProducerService.Iface {
+
+    @Override
+    public void sendMessageToKafka(MessageSendBean messageSendBean) {
+        String topic = messageSendBean.getTopic();
+        String message = messageSendBean.getMessage();
+        org.apache.kafka.clients.producer.KafkaProducer producer = KafkaFactory.getProducer();
+        Long startTime = System.currentTimeMillis();
+        producer.send(new ProducerRecord<Long, String>(topic, startTime, message),new KafkaCallBack(startTime, startTime, message));
+    }
+
+}
+```
+
+7.启动 Spring boot 应用
+
+```
+@EnableAutoConfiguration
+@ComponentScan("com.lfzhu.*")
+@ServletComponentScan
+public class MyApplication {
+
+    public static void main(String[] args) {
+        SpringApplication.run(MyApplication.class, args);
+    }
+}
+```
+
+#### 主服务中通过 Thrift 通信协议调用微服务，实现日志存储
+1.在`pom.xml`文件中添加依赖
+
+```
+<!-- thrift 接口项目 -->
+<dependency>
+    <groupId>com.lfzhu</groupId>
+    <artifactId>thrift-interface</artifactId>
+    <version>0.0.1</version>
+</dependency>
+
+<!-- thrift zookeeper  服务工厂项目-->
+<dependency>
+    <groupId>com.lfzhu</groupId>
+    <artifactId>thrift-zookeeper-factory</artifactId>
+    <version>0.0.1</version>
+</dependency>
+```
+
+2.
 
 
 # 参考
