--- a/_posts/2017-10-27-微服务.md
+++ b/_posts/2017-10-27-微服务.md
@@ -174,7 +174,7 @@ public class ThriftServerManager {
             @Override
             public void run() {
                 try {
-                    publishThriftService(iface).serve();
+                    publishThriftService(iface).serve();//注册完服务后，需要启动Tserver
                 } catch (TTransportException e) {
                     throw new RuntimeException("Init TTransport error! port is " + servicePort);
                 }
@@ -182,6 +182,7 @@ public class ThriftServerManager {
         });
     }
 
+    //实现thrift服务注册
     private TServer publishThriftService(TProcessor iface) throws TTransportException {
         TServerTransport transport = new TServerSocket(servicePort);
         TServer server =
@@ -432,7 +433,7 @@ bootstrap.servers=127.0.0.1:9092
 client.id=FasLogProducer
 ```
 
-3.初始化 ZooKeeper 配置工厂
+3.初始化 Thrift 和 ZooKeeper 服务器端的配置工厂
 
 ```
 @Configuration
@@ -454,11 +455,21 @@ public class ZooKeeperConfigFactory {
             new KafkaProducerService.Processor(new KafkaProducerServiceImpl());
         ThriftServerManager thriftServerManager = new ThriftServerManager(processor, port);
         thriftServerManager.publishThriftServiceInThreadPool();
+        
         ZooKeeperServerManager server = new ZooKeeperServerManager(serviceName, zookeeperList);
         server.registThriftServiceToZookeeperInThreadPool();
     }
 }
 ```
+
+- `publishThriftServiceInThreadPool` 的作用是将实现类注册到 thrift 服务器中。注册完服务后，启动 TServer，这一步需要在线程里启动。
+
+- `registThriftServiceToZookeeperInThreadPool` 的作用是使用 zookeeper 进行服务名称注册。这样才能实现负载均衡，让客户端可以根据服务实例列表选择服务来执行。
+
+- 这里只需要注册服务所在服务器的IP即可，因为客户端只要知道IP，也就知道访问那个IP下的该服务。
+
+- 要注意这里使用 zkClient.createEphemeral 建立临时节点，如果这台服务器宕机，这个临时节点是会被清除的，这样客户端在访问时就不会再选择该服务器上的服务。
+
 
 4.定义 Kafka 生产者回调类
 
@@ -556,8 +567,10 @@ public class MyApplication {
 }
 ```
 
+我们可以将该微服务部署到多台服务器中，实现负载均衡。
+
 #### 主服务中通过 Thrift 通信协议调用微服务，实现日志存储
-1.在`pom.xml`文件中添加依赖
+1.在 `pom.xml` 文件中添加依赖
 
 ```
 <!-- thrift 接口项目 -->
@@ -575,8 +588,102 @@ public class MyApplication {
 </dependency>
 ```
 
-2.
+2.重写 `ZooKeeperClientManager` 类里面的 `createService()` 方法，将真实的 TServiceClient 注册进来
 
+```
+public class MyZookeeperClientManager extends ZooKeeperClientManager {
+
+
+    public MyZookeeperClientManager(String serviceName, String zookeeperList, int servicePort) {
+        super(serviceName, zookeeperList, servicePort);
+    }
+
+    @Override
+    public TServiceClient createService(String serviceInstanceName) {
+        return new KafkaProducerService.Client(this.getTProtocol(serviceInstanceName));
+    }
+
+}
+```
+
+3.初始化 ZooKeeper 客户端的配置工厂，并且注册事件监听
+
+```
+public class ZooKeeperConfigFactory {
+
+    @Bean
+    public Boolean startZooKeeperInThreadPool() {
+        String serviceName = String.valueOf(System.getenv("serviceName"));//参数通过环境变量注入进来
+        String servicePort = String.valueOf(System.getenv("servicePort"));
+        String zookeeperList = String.valueOf(System.getenv("zookeeperList"));
+        int port = Integer.valueOf(servicePort);
+        MyZooKeeperClientManager client = new MyZooKeeperClientManager(serviceName, zookeeperList, port);
+        client.startZooKeeperInThreadPool();
+        return Boolean.TRUE;
+    }
+}
+```
+
+- `startZooKeeperInThreadPool` 的作用是注册事件监听，客户端需要能及时的监听服务列表的变化并作出负载均衡。
+
+
+4.在 `applicationContext.xml` 文件中初始化 `ZooKeeperConfigFactory`
+
+```
+<bean id="zooKeeperConfigFactory" class="com.amarsoft.fas.kafka.service.ZooKeeperConfigFactory"/>
+```
+
+5.封装存储日志的接口
+
+```
+public interface KafkaProduceService {
+
+    void sendMessageToKafka(String topic, String message);
+}
+```
+
+
+6.实现存储日志的接口
+
+```
+@Service
+public class KafkaProduceServiceImpl implements KafkaProduceService {
+
+    private Logger logger = LoggerFactory.getLogger(KafkaProduceServiceImpl.class);
+
+    @Override
+    public void sendMessageToKafka(String topic, String message) {
+        MessageSendBean messageSendBean = new MessageSendBean();
+        messageSendBean.setTopic(topic);
+        messageSendBean.setMessage(message);
+        
+        String serviceName = String.valueOf(System.getenv("serviceName"));//参数通过环境变量注入进来
+        String servicePort = String.valueOf(System.getenv("servicePort"));
+        
+        TServiceClient randomServiceClient = MyZooKeeperClientManager.getRandomService();
+        if (randomServiceClient == null) {
+            logger.error("Remote kafka produce service is null, service name is " + serviceName + ",port is " + servicePort);
+            return;
+        }
+
+        KafkaProducerService.Client svr = (KafkaProducerService.Client) randomServiceClient;
+        try {
+            svr.sendMessageToKafka(messageSendBean);//RPC 调用微服务接口
+        } catch (TException ex) {
+            logger.error("Send message to kafka failed, service name is " + serviceName + ",port is "
+                    + servicePort + ",error message is " + ex.getMessage() + ".");
+            return;
+        }
+    }
+}
+```
+
+- 这里我们使用最简单的随机获取服务来作为负载均衡的一种方式。
+
+## 总结
+至此，我们实现了一个简单的微服务案例。
+
+主服务采用 Thrift 通信协议，通过 Zookeeper 进行服务治理，随即获取一个微服务对象，远程调用该微服务的存储日志的接口。从而实现 Kafka 生产者模式记录日志的功能。
 
 # 参考
 [Building Apache Thrift on CentOS](https://thrift.apache.org/docs/install/centos)
@@ -589,8 +696,12 @@ public class MyApplication {
 
 [基于Zookeeper的服务注册与发现 ](https://tech.imdada.cn/2015/12/03/service-registry-and-discovery-with-zk/)
 
-[](http://www.cnblogs.com/skyblog/p/5535418.html)
+[Spring cloud 7day simple](https://gitee.com/zhou666/spring-cloud-7simple)
+
+[Spring cloud 7day simple 说明](http://www.cnblogs.com/skyblog/p/5535418.html)
 
 [Apache Helix简介](http://blog.csdn.net/oopsoom/article/details/47416575)
 
 [Kafka快速入门](http://colobu.com/2014/08/06/kafka-quickstart/)
+
+[Kafka 0.9.0 Documentation](http://kafka.apache.org/090/documentation.html#quickstart)
