feat:update microservice.md

--- a/_posts/2017-10-31-微服务.md
+++ b/_posts/2017-10-31-微服务.md
@@ -681,7 +681,7 @@ public class KafkaProduceServiceImpl implements KafkaProduceService {
 - 这里我们使用最简单的随机获取服务来作为负载均衡的一种方式。
 
 ## 总结
-至此，我们实现了一个简单的微服务案例。
+至此，我们实现了一个相对完整的微服务案例。
 
 主服务采用 Thrift 通信协议，通过 Zookeeper 进行服务治理，随即获取一个微服务对象，远程调用该微服务的存储日志的接口。从而实现 Kafka 生产者模式记录日志的功能。
 
