--- a/_posts/2017-10-14-Git笔记.md
+++ b/_posts/2017-10-14-Git笔记.md
@@ -286,7 +286,7 @@ $ git push origin --delete [branch-name]
 $ git branch -dr [remote/branch]
 ```
 # Git 标签管理(tag)
-发布一个版本时，我们通常先在版本库中打一个标签（tag），这样，就唯一确定了打标签时刻的版本。将来无论什么时候，取某个标签的版本，就是把那个打标签的时刻的历史版本取出来。所以，标签也是版本库的一个快照
+发布一个版本时，我们通常先在版本库中打一个标签（tag），这样，就唯一确定了打标签时刻的版本。将来无论什么时候，取某个标签的版本，就是把那个打标签的时刻的历史版本取出来。所以，标签也是版本库的一个快照。
 ```
 // 查看所有标签，注意，标签不是按时间顺序列出，而是按字母排序的
 $ git tag
@@ -360,7 +360,7 @@ $ git stash
 $ git stash pop
 ```
 # Stash[](http://)
-假如你在 develop 分支开发时，release 分支有个 Bug 需要马上修复，此时，可以用stash 命令，把 develop 分支的代码储藏”起来，等 release 分支完工后继续回到 develop 分支工作。
+假如你在 develop 分支开发时，release 分支有个 Bug 需要马上修复，此时，可以用stash 命令，把 develop 分支的代码储藏起来，等 release 分支完工后继续回到 develop 分支工作。
 ```
 // 存储所有未提交的修改
 $ git stash
