feat:update microservice.md

--- a/_posts/2017-10-31-微服务.md
+++ b/_posts/2017-10-31-微服务.md
@@ -567,7 +567,7 @@ public class MyApplication {
 }
 ```
 
-我们可以将该微服务部署到多台服务器中，实现负载均衡。
+***我们可以将该微服务部署到多台服务器中，实现负载均衡。***
 
 #### 主服务中通过 Thrift 通信协议调用微服务，实现日志存储
 1.在 `pom.xml` 文件中添加依赖
