--- a/_posts/2017-10-31-微服务.md
+++ b/_posts/2017-10-31-微服务.md
@@ -680,6 +680,10 @@ public class KafkaProduceServiceImpl implements KafkaProduceService {
 
 - 这里我们使用最简单的随机获取服务来作为负载均衡的一种方式。
 
+7.过滤器中或者其它需要收集日志的地方调用存储日志的接口 `sendMessageToKafka()`，实现日志收集
+
+
+
 ## 总结
 至此，我们实现了一个相对完整的微服务案例。
 
