--- a/_posts/2017-10-12-RabbitMQ消息队列.md
+++ b/_posts/2017-10-12-RabbitMQ消息队列.md
@@ -14,7 +14,7 @@ tags:
 
 > 纸上得来终觉浅，绝知此事要躬行。
 >
-> [我的博客](http://uncledrewzhu.github.io/)
+> [我的博客](http://uncledrew.405go.cn/)
 
 # 前言
 先说说项目上最早使用 RabbitMQ 场景：用户在登录的时候，使用图片验证码+短信验证码进行身份的校验。在图片验证码校验成功之后，需要向当前用户的手机发送一个验证短信，然后再进行短信验证码的校验。此时我们发现，校验图片验证码和发送短信是两步操作，并且第二步操作的成功与否不会直接影响第一步的操作，假如发送短信失败，可以选择重新发送。
