--- a/_posts/2017-10-14-Git笔记.md
+++ b/_posts/2017-10-14-Git笔记.md
@@ -14,7 +14,7 @@ tags:
 
 > 纸上得来终觉浅，绝知此事要躬行。
 >
-> [我的博客](http://uncledrewzhu.github.io/)
+> [我的博客](http://uncledrew.405go.cn/)
 
 # 前言
 主要是整理一些自己工作上和网上看到的关于Git好的资料。
