--- a/_posts/2017-10-19-领域事件驱动和监听.md
+++ b/_posts/2017-10-19-领域事件驱动和监听.md
@@ -17,7 +17,7 @@ tags:
 
 > 纸上得来终觉浅，绝知此事要躬行。
 >
-> [我的博客](http://uncledrewzhu.github.io/)
+> [我的博客](http://uncledrew.405go.cn/)
 
 # 前言
 现在流行的DDD(领域驱动设计)模型已经普遍用于项目中，一个产品根据不同的领域划分，进行开发，互相隔离却又互相合作。
