--- a/_posts/2017-10-23-Spring注解.md
+++ b/_posts/2017-10-23-Spring注解.md
@@ -15,7 +15,7 @@ tags:
 
 > 纸上得来终觉浅，绝知此事要躬行。
 >
-> [我的博客](http://uncledrewzhu.github.io/)
+> [我的博客](http://uncledrew.405go.cn/)
 
 # 前言
 现在越来越多的项目后端框架是基于 Spring 或者 Spring boot。而 Spring 框架使用最多的就是注解。
