--- a/_posts/2017-10-25-Web项目安全机制和权限管理.md
+++ b/_posts/2017-10-25-Web项目安全机制和权限管理.md
@@ -16,7 +16,7 @@ tags:
 
 > 纸上得来终觉浅，绝知此事要躬行。
 >
-> [我的博客](http://uncledrewzhu.github.io/)
+> [我的博客](http://uncledrew.405go.cn/)
 
 # 一次请求在服务器端的校验过程
 
