feat:update idea options md file

--- a/_posts/2017-11-13-IDEA内存设置.md
+++ b/_posts/2017-11-13-IDEA内存设置.md
@@ -71,3 +71,5 @@ java -Xmx128m -Xms64m -Xmn32m -Xss16m Test
 [IDEA内存设置参考](http://blog.csdn.net/mediocre117/article/details/54925038)
 
 [IntelliJ IDEA 设置 JVM 运行参数](http://blog.csdn.net/kl28978113/article/details/53031710)
+
+[IntelliJ IDEA 优化总结](http://blog.163.com/mr_liuyong/blog/static/12342437620111172623969/)
