feat:update java-concurrent.md

--- a/_posts/2017-11-17-Java并发编程实战读书笔记.md
+++ b/_posts/2017-11-17-Java并发编程实战读书笔记.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      Java 并发编程实战读书笔记
-subtitle:   总结 Java 并发编程实战这本书中有用的思想和实例
+subtitle:   记录 Java 并发编程实战这本书中有用的思想和实例
 date:       2017-11-17
 author:     uncledrew
 header-img: img/post-bg-re-vs-ng2.jpg
@@ -181,4 +181,6 @@ public class MutablePoint {
 ```
 
 ***虽然 MutablePoint 类不是线程安全的，但 MonitorVehicleTracker 是线程安全的。他所包含的 Map 和 可变的 Point 对象都未曾发布。***
+
+#### 线程安全性的委托
 
