feat:update java-concurrent.md

--- a/_posts/2017-11-17-Java并发编程实战读书笔记.md
+++ b/_posts/2017-11-17-Java并发编程实战读书笔记.md
@@ -158,7 +158,7 @@ public class MonitorVehicleTracker {
             result.put(key, new MutablePoint(map.get(key)));//防止容器中的对象引用被修改
         }
 
-        return Collections.unmodifiableMap(result);//防止容器对象被修改
+        return Collections.unmodifiableMap(result);//防止容器对象本身被修改
     }
 }
 ```
@@ -183,4 +183,159 @@ public class MutablePoint {
 ***虽然 MutablePoint 类不是线程安全的，但 MonitorVehicleTracker 是线程安全的。他所包含的 Map 和 可变的 Point 对象都未曾发布。***
 
 #### 线程安全性的委托
+基于委托的获取汽车位置的例子：
+
+```
+public class ImmutablePoint {
+
+    public final int x, y;//不可变的
+
+
+    public ImmutablePoint(int x, int y) {
+        this.x = x;
+        this.y = y;
+    }
+}
+
+```
+
+由于 ImmutablePoint 类是不可变的，因此他是线程安全的。不可变的值可以被自由地共享和发布，因此返回 locaton 时不需要复制了。
+
+```
+public class DelegatingVehicleTracker {
+
+    private final ConcurrentMap<String, ImmutablePoint> locations;
+    private final Map<String, ImmutablePoint> unmodifiableMap;
+
+    public DelegatingVehicleTracker(Map<String, ImmutablePoint> points) {
+        locations = new ConcurrentHashMap<String, ImmutablePoint>(points);
+        unmodifiableMap = Collections.unmodifiableMap(locations);
+    }
+
+    public Map<String, ImmutablePoint> getLocations() {
+        return unmodifiableMap;//返回 locations 的实时拷贝
+    }
+
+    public Map<String, ImmutablePoint> getLocations2() {
+        return Collections.unmodifiableMap(new HashMap<>(locations));//返回 locations 的静态拷贝
+    }
+
+    public ImmutablePoint getLocation(String id) {
+        return locations.get(id);
+    }
+
+    public void setLocation(String id, int x, int y) {
+        if (locations.replace(id, new ImmutablePoint(x, y)) == null) {
+            //throw 
+        }
+    }
+}
+```
+
+如果使用最初的 MutablePoint 就会破坏封装性，因为 getLocations 会发布一个指向可变状态的引用，而这个引用不时线程安全的。
+
+
+#### 独立的状态变量
+CopyOnWriteArrayList 用于保存对象列表。因为他是线程安全的列表。
+
+
+#### 通过客户端加锁实现线程安全
+
+###### 错误的锁上进行了同步 
+下面时一个非线程安全的“若没有则添加”的例子，因为在错误的锁上进行了同步，这个锁并不是 ListHelper 上的锁。
+这意味着 putIfAbsent 相对于 List 的其它操作来说并不是原子的，因此无法确保当 putIfAbsent 执行时另一个线程不会修改链表。
+
+```
+//NotThreadSafe
+public class ListHelper<E> {
+
+    public List<E> list = Collections.synchronizedList(new ArrayList<>());
+
+    public synchronized boolean putIfAbsent(E x) {
+        boolean absent = !list.contains(x);
+        if (absent) {
+            list.add(x);
+        }
+        return absent;
+    }
+
+}
+```
+
+###### 正确的锁上进行了同步 
+要使这个方法能正确执行，必须使 List 在实现客户端加锁或外部加锁时使用同一个锁。 
+
+```
+//ThreadSafe
+public class ThreadSafeListHelper<E> {
+
+    public List<E> list = Collections.synchronizedList(new ArrayList<>());
+
+    public boolean putIfAbsent(E x) {
+        synchronized (list) {
+            boolean absent = !list.contains(x);
+            if (absent) {
+                list.add(x);
+            }
+            return absent;
+        }
+    }
+
+}
+```
+
+###### 在现有的线程安全类中添加方法
+因为在 Vector 的规范中定义了他的同步策略，所以这里可以将锁放在 putIfAbsent 上。
+
+```
+//ThreadSafe
+public class BetterVector<E> extends Vector<E> {
+
+    public synchronized boolean putIfAbsent(E x) {
+        boolean absent = !contains(x);
+        if (absent) {
+            add(x);
+        }
+        return absent;
+    }
+
+}
+```
+
+***注意：客户端加锁同样会破坏同步策略的封装性。***
+
+
+#### 通过组合实现线程安全
+为现有的类添加一个原子操作时，有一种更好的办法：组合。
+
+
+通过组合实现“若没有则添加”：ImprovedList 通过自身的内置锁增加了一层额外的加锁，他不关心底层的 List 是否线程安全，
+即使不安全，ImprovedList 也会提供一致的加锁机制来实现线程安全性。
+
+```
+public class ImprovedList<E> implements List<E> {
+
+    private final List<E> list;
+
+    public ImprovedList(List<E> list) {
+        this.list = list;
+    }
+
+    public synchronized boolean putIfAbsent(E x) {
+        boolean absent = !list.contains(x);
+        if (absent) {
+            list.add(x);
+        }
+        return absent;
+    }
+
+    @Override
+    public synchronized void clear() {
+        list.clear();
+    }
+    
+    //other methods
+}
+```
+
 
