feat:update java-concurrent.md

--- a/_posts/2017-11-17-Java并发编程实战读书笔记.md
+++ b/_posts/2017-11-17-Java并发编程实战读书笔记.md
@@ -338,4 +338,16 @@ public class ImprovedList<E> implements List<E> {
 }
 ```
 
+#### ConcurrentHashMap
+与 HashMap 一样，ConcurrentHashMap 也是一个基于散列的 Map。
+
+ConcurrentHashMap 并不是将每个方法都在同一个锁上同步并使得每次只能有一个线程访问容器，而是是用一种粒度更细的
+加锁机制来实现更大程度的共享，这种机制称为 ***分段锁***。
+
+在这种机制中，任意数量的读取线程可以并发地访问 Map，执行读取操作的线程和执行写入操作的线程可以并发的访问 Map，
+并且一定数量的写入线程可以并发的修改 Map。
+
+****ConcurrentHashMap 在并发访问环境下实现更高的吞吐量，而在单线程环境中只损失非常小的性能。****
+
+
 
