feat:update java-concurrent.md

--- a/_posts/2017-11-17-Java并发编程实战读书笔记.md
+++ b/_posts/2017-11-17-Java并发编程实战读书笔记.md
@@ -338,6 +338,43 @@ public class ImprovedList<E> implements List<E> {
 }
 ```
 
+#### 阻塞队列
+线程阻塞或者暂停执行的原因：
+- 等待 I/O 操作结束
+- 等待获得一个锁
+- 等待从 Thread.sleep 方法中醒来
+- 等待另一个线程的计算结果
+
+###### 恢复中断状态以避免屏蔽中断
+
+```
+public class TaskRunnable implements Runnable {
+
+    private BlockingQueue<Task> queue;
+
+    //.... init queue
+
+    @Override
+    public void run() {
+        try {
+            processTask(queue.take());
+        } catch (InterruptedException e) {
+            //恢复被中断的状态
+            Thread.currentThread().interrupt();
+        }
+    }
+
+    private void processTask(Task take) throws InterruptedException {
+
+    }
+
+    class Task {
+
+    }
+}
+```
+
+
 #### ConcurrentHashMap
 与 HashMap 一样，ConcurrentHashMap 也是一个基于散列的 Map。
 
