feat:update java-concurrent.md

--- a/_posts/2017-11-17-Java并发编程实战读书笔记.md
+++ b/_posts/2017-11-17-Java并发编程实战读书笔记.md
@@ -524,6 +524,65 @@ public class LifecycleWebServer {
 }
 ```
 
+
+#### 取消与关闭
+###### 任务取消
+取消某个操作的原因包括：
+- 用户请求取消
+- 有时间限制的操作
+- 应用程序事件
+- 错误
+- 关闭
+
+###### 生成和取消素数的例子
+线程安全的素数生成器类：***为了使这个过程能可靠的工作，标志 cancelled 必须为 volatile 类型***
+```
+public class PrimeGenerator implements Runnable {
+
+    @GuardedBy("this")
+    private final List<BigInteger> primes = new ArrayList<>();
+    private volatile boolean cancelled;
+
+
+    @Override
+    public void run() {
+        BigInteger p = BigInteger.ONE;
+        while (!cancelled) {
+            p = p.nextProbablePrime();
+            synchronized (this) {
+                primes.add(p);
+            }
+        }
+    }
+
+    public void cancel() {
+        cancelled = true;
+    }
+
+    public synchronized List<BigInteger> get() {
+        return new ArrayList<>(primes);
+    }
+}
+```
+
+一个仅运行一秒钟的素数生成器：
+```
+public class PrimeGeneratorMain {
+    public static void main(String[] args) throws InterruptedException {
+        PrimeGenerator primeGenerator = new PrimeGenerator();
+        new Thread(primeGenerator).start();
+        try {
+            SECONDS.sleep(1);
+        } finally {
+            primeGenerator.cancel();
+        }
+        System.out.print(primeGenerator.get());
+    }
+}
+```
+
+PrimeGenerator 使用了一种简单的取消策略：客户代码通过调用 cancel 来请求取消，PrimeGenerator 在每次搜索素数前首先检查是否存在取消请求，如果存在则退出。
+
 #### 线程池
 在线程池中执行任务比为每个任务分配一个线程优势更多。
 
