feat:update java-concurrent.md

--- a/_posts/2017-11-17-Java并发编程实战读书笔记.md
+++ b/_posts/2017-11-17-Java并发编程实战读书笔记.md
@@ -583,6 +583,11 @@ public class PrimeGeneratorMain {
 
 PrimeGenerator 使用了一种简单的取消策略：客户代码通过调用 cancel 来请求取消，PrimeGenerator 在每次搜索素数前首先检查是否存在取消请求，如果存在则退出。
 
+
+###### 中断
+调用 interrupt 并不意味着立即停止目标线程正在进行的工作，而只是传递了请求中断的消息。
+
+
 #### 线程池
 在线程池中执行任务比为每个任务分配一个线程优势更多。
 
