feat:update java-concurrent.md

--- a/_posts/2017-11-17-Java并发编程实战读书笔记.md
+++ b/_posts/2017-11-17-Java并发编程实战读书笔记.md
@@ -585,7 +585,41 @@ PrimeGenerator 使用了一种简单的取消策略：客户代码通过调用 c
 
 
 ###### 中断
-调用 interrupt 并不意味着立即停止目标线程正在进行的工作，而只是传递了请求中断的消息。
+调用 interrupt 并不意味着立即停止目标线程正在进行的工作，而只是传递了请求中断的消息，由线程的下一个合适的时刻中断自己。
+
+***中断是实现取消的最合理方式。***
+
+通过中断来取消的例子：
+```
+public class PrimeProducer extends Thread {
+
+    private final BlockingQueue<BigInteger> queue;
+
+    public PrimeProducer(BlockingQueue<BigInteger> queue) {
+        this.queue = queue;
+    }
+
+    public void run() {
+        try {
+            BigInteger p = BigInteger.ONE;
+            while (!Thread.currentThread().isInterrupted()) {
+                queue.put(p.nextProbablePrime());
+            }
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+            //允许线程退出
+        }
+    }
+
+    public void cancel() {
+        this.interrupt();
+    }
+}
+```
+
+###### 通过 Future 来取消任务
+当 Future.get 抛出 InterruptedException 或者 TimeoutException 时，如果你知道不再需要结果，那么就可以调用 Future.cancel 来取消任务。
+
 
 
 #### 线程池
