feat:update java-concurrent.md

--- a/_posts/2017-11-17-Java并发编程实战读书笔记.md
+++ b/_posts/2017-11-17-Java并发编程实战读书笔记.md
@@ -9,6 +9,7 @@ catalog: true
 tags:
     - 并发
     - 线程
+    - CountDownLatch
 ---
 
 > 纸上得来终觉浅，绝知此事要躬行。
@@ -620,9 +621,187 @@ public class PrimeProducer extends Thread {
 ###### 通过 Future 来取消任务
 当 Future.get 抛出 InterruptedException 或者 TimeoutException 时，如果你知道不再需要结果，那么就可以调用 Future.cancel 来取消任务。
 
+###### 处理非正常的线程终止
+将异常写入日志：
+```
+import java.util.logging.Level;
+import java.util.logging.Logger;
+
+public class UEHLogger implements Thread.UncaughtExceptionHandler {
+    @Override 
+    public void uncaughtException(Thread t, Throwable e) {
+        Logger logger = Logger.getAnonymousLogger();
+        logger.log(Level.SEVERE, "Thread terminated with exception:" + t.getName());
+    }
+}
+```
+
+在运行较长的应用程序中，通常会为所有线程的未捕获异常指定同一个异常处理器，并且该处理器至少会将异常信息记录到日志中。
+
+
+#### JVM 关闭
+JVM 既可以正常关闭，也可以强行关闭。
+
+正常关闭：
+- 最后一个线程结束
+- 调用 System.out
+- Ctrl-C
+
+###### 关闭钩子
+在正常关闭中，JVM 首先调用自己已注册的关闭钩子(Shutdown Hook)。
+
+关闭钩子可用于实现服务或者应用程序的清理工作，例如删除文件或者清除无法由操作系统自动清除的资源。
+
+通过注册一个关闭钩子来停止日志服务：addShutdownHook()
+```
+public class LogService {
+    public void start() {
+        Runtime.getRuntime().addShutdownHook(new Thread() {
+            public void run() {
+                try {
+                    LogService.this.stop();
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+        });
+    }
+
+    public void stop() throws InterruptedException {
+
+    }
+}
+```
+
+###### 守护线程
+线程分为两种：普通线程和守护线程。
+
+守护线程：当一个线程退出时，JVM 会检查其它正在运行的线程，如果这些线程都是守护线程，那么 JVM 会正常退出操作。
+当JVM 停止时，所有仍然存在的守护线程都将被抛弃————既不会执行 finally 代码块，也不会执行回卷栈，而 JVM 只是直接退出。
+
+***注意：守护线程通常不能用来替代应用程序管理程序中的各个服务的声明周期。***
+
+###### 终结器
+垃圾回收器对那些定义了 finalize 方法的对象会特殊处理：在回收器释放他们后，调用他们的 finalize 方法，从而保证一些持久化资源被释放。
 
 
 #### 线程池
 在线程池中执行任务比为每个任务分配一个线程优势更多。
 
 通过重用现有的线程而不是创建新线程，可以在处理多个请求时，分摊在线程创建和销毁过程中产生的巨大开销。
+
+
+#### CountDownLatch
+CountDownLatch 这个类能够使一个线程等待其他线程完成各自的工作后再执行。
+
+CountDownLatch 是通过一个计数器来实现的，计数器的初始值为线程的数量。每当一个线程完成了自己的任务后，计数器的值就会减1。
+当计数器值到达0时，它表示所有的线程已经完成了任务，然后在闭锁上等待的线程就可以恢复执行任务。
+
+CountDownLatch的伪代码如下所示：
+- Main thread start
+- Create CountDownLatch for N threads
+- Create and start N threads
+- Main thread wait on latch
+- N threads completes there tasks are returns
+- Main thread resume execution
+
+###### 工作原理
+构造器中的计数值（count）实际上就是闭锁需要等待的线程数量。这个值只能被设置一次，而且 CountDownLatch 没有提供任何机制去重新设置这个计数值。
+
+与 CountDownLatch 的第一次交互是主线程等待其他线程。主线程必须在启动其他线程后立即调用 CountDownLatch.await() 方法。
+这样主线程的操作就会在这个方法上阻塞，直到其他线程完成各自的任务。
+
+其他N 个线程必须引用闭锁对象，因为他们需要通知 CountDownLatch 对象，他们已经完成了各自的任务。
+这种通知机制是通过 CountDownLatch.countDown() 方法来完成的；每调用一次这个方法，在构造函数中初始化的 count 值就减1。
+所以当N个线程都调用了这个方法，count 的值等于0，然后主线程就能通过 await() 方法，恢复执行自己的任务。
+
+###### 例子
+```
+import java.util.concurrent.CountDownLatch;
+
+public class Player implements Runnable {
+
+    private int id;
+    private CountDownLatch begin;
+    private CountDownLatch end;
+
+    public Player(int i, CountDownLatch begin, CountDownLatch end) {
+        super();
+        this.id = i;
+        this.begin = begin;
+        this.end = end;
+    }
+
+    @Override
+    public void run() {
+        try {
+            begin.await();        //等待begin的状态为0
+            Thread.sleep((long) (Math.random() * 100));    //随机分配时间，即运动员完成时间
+            System.out.println("Play" + id + " arrived.");
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        } finally {
+            end.countDown();    //使end状态减1，最终减至0
+        }
+    }
+}
+```
+
+```
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+
+public class CountDownLatchDemo {
+
+    private static final int PLAYER_AMOUNT = 5;
+
+    public CountDownLatchDemo() {
+    }
+
+    /**
+     * @param args
+     */
+    public static void main(String[] args) {
+        //对于每位运动员，CountDownLatch减1后即结束比赛
+        CountDownLatch begin = new CountDownLatch(1);
+        //对于整个比赛，所有运动员结束后才算结束
+        CountDownLatch end = new CountDownLatch(PLAYER_AMOUNT);
+        Player[] plays = new Player[PLAYER_AMOUNT];
+
+        for (int i = 0; i < PLAYER_AMOUNT; i++){
+            plays[i] = new Player(i + 1, begin, end);
+        }
+
+        //设置特定的线程池，大小为5
+        ExecutorService exe = Executors.newFixedThreadPool(PLAYER_AMOUNT);
+        for (final Player p : plays){
+            exe.execute(p);            //分配线程
+        }
+        System.out.println("Race begins!");
+        begin.countDown();
+        try {
+            end.await();            //等待end状态变为0，即为比赛结束
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        } finally {
+            System.out.println("Race ends!");
+        }
+        //exe.shutdown();
+    }
+}
+```
+
+运行结果：
+```
+Race begins!
+Play2 arrived.
+Play4 arrived.
+Play5 arrived.
+Play3 arrived.
+Play1 arrived.
+Race ends!
+```
+
+###### 参考
+[什么时候使用CountDownLatch](http://www.importnew.com/15731.html)
