feat:update java-concurrent.md

--- a/_posts/2017-11-17-Java并发编程实战读书笔记.md
+++ b/_posts/2017-11-17-Java并发编程实战读书笔记.md
@@ -690,3 +690,7 @@ public class LogService {
 
 通过重用现有的线程而不是创建新线程，可以在处理多个请求时，分摊在线程创建和销毁过程中产生的巨大开销。
 
+ThreadPoolExecutor 是一个灵活的稳定的线程池，允许进行各种定制。
+
+
+
