--- a/_posts/2017-10-14-Git笔记.md
+++ b/_posts/2017-10-14-Git笔记.md
@@ -463,6 +463,48 @@ $ git submodule foreach git pull origin master
 // 删除子目录
 $ git rm --cached [ditionatyName]
 ```
+
+# 换行符LF与CRLF转换
+- UNIX/Linux/Mac OS 使用的是 0x0A（LF）
+- DOS/Windows 一直使用 0x0D0A（CRLF）
+
+Git提供了一个“换行符自动转换”功能。这个功能默认处于“自动模式”，当你在签出文件时，
+它试图将 UNIX 换行符（LF）替换为 Windows 的换行符（CRLF）；当你在提交文件时，
+它又试图将 CRLF 替换为 LF。Git 的“换行符自动转换”功能听起来似乎很智能、很贴心，
+因为它试图一方面保持仓库内文件的一致性（UNIX 风格），一方面又保证本地文件的兼容性（Windows 风格）。
+但遗憾的是，这个功能是有 bug 的，而且在短期内都不太可能会修正。
+
+#### 解决方案
+```
+//提交时转换为LF，检出时转换为CRLF
+git config --global core.autocrlf true
+```
+
+```
+//提交时转换为LF，检出时不转换
+git config --global core.autocrlf input
+```
+
+```
+//提交检出均不转换
+git config --global core.autocrlf false
+```
+
+```
+//拒绝提交包含混合换行符的文件
+git config --global core.safecrlf true
+```
+
+```
+//允许提交包含混合换行符的文件
+git config --global core.safecrlf false
+```
+
+```
+//提交包含混合换行符的文件时给出警告
+git config --global core.safecrlf warn
+```
+
 # 参考
 [Git 命令详解及常用命令整理](https://yq.aliyun.com/ziliao/88995)
 
