--- a/_posts/2018-10-25-线程中的日志管理.md
+++ b/_posts/2018-10-25-线程中的日志管理.md
@@ -243,6 +243,12 @@ public class MxLoggerTest {
 可以利用 Kafka 的消息收发机制，主程序将日志包装好作为消息体，然后通过 Elasticsearch 读取消息并且存储起来。
 最后在 Kibana 图形界面进行搜索、分析和可视化存储在 Elasticsearch指标中的日志数据。
 
+# ELK 相关概念介绍
+ELK 是 Elasticsearch、Logstash、Kibana 这三个核心套件的简称。
+
+- Elasticsearch 是实时全文搜索和分析引擎，提供搜集、分析、存储数据三大功能；是一套开放 REST 和 JAVA API 等结构提供高效搜索功能，可扩展的分布式系统。它构建于 Apache Lucene 搜索引擎库之上。
+- Logstash 是一个用来搜集、分析、过滤日志的工具。它支持几乎任何类型的日志，包括系统日志、错误日志和自定义应用程序日志。它可以从许多来源接收日志，这些来源包括 syslog、消息传递（例如 RabbitMQ）和JMX，它能够以多种方式输出数据，包括电子邮件、websockets 和 Elasticsearch。
+- Kibana 是一个基于 Web 的图形界面，用于搜索、分析和可视化存储在 Elasticsearch 指标中的日志数据。它利用 Elasticsearch 的 REST 接口来检索数据，不仅允许用户创建他们自己的数据的定制仪表板视图，还允许他们以特殊的方式查询和过滤数据
 
 # 参考
 [快速搭建ELK日志分析系统](https://www.cnblogs.com/yuhuLin/p/7018858.html)
