feat:update log manager md file

--- a/_posts/2018-10-25-线程中的日志管理.md
+++ b/_posts/2018-10-25-线程中的日志管理.md
@@ -241,7 +241,7 @@ public class MxLoggerTest {
 
 # 扩展
 可以利用 Kafka 的消息收发机制，主程序将日志包装好作为消息体，然后通过 Elasticsearch 读取消息并且存储起来。
-最后在 Kibana 图形界面进行搜索、分析和可视化存储在 Elasticsearch指标中的日志数据。
+最后在 Kibana 图形界面进行搜索、分析和可视化存储在 Elasticsearch 指标中的日志数据。
 
 # ELK 相关概念介绍
 ELK 是 Elasticsearch、Logstash、Kibana 这三个核心套件的简称。
@@ -254,3 +254,5 @@ ELK 是 Elasticsearch、Logstash、Kibana 这三个核心套件的简称。
 [快速搭建ELK日志分析系统](https://www.cnblogs.com/yuhuLin/p/7018858.html)
 
 [随笔分类 - EleasticSearch](https://www.cnblogs.com/Wolfmanlq/category/897055.html)
+
+[深入分析 ThreadLocal 内存泄漏问题](http://www.importnew.com/22039.html)
