feat:update log manager md file

--- a/_posts/2018-10-25-线程中的日志管理.md
+++ b/_posts/2018-10-25-线程中的日志管理.md
@@ -256,3 +256,7 @@ ELK 是 Elasticsearch、Logstash、Kibana 这三个核心套件的简称。
 [随笔分类 - EleasticSearch](https://www.cnblogs.com/Wolfmanlq/category/897055.html)
 
 [深入分析 ThreadLocal 内存泄漏问题](http://www.importnew.com/22039.html)
+
+[Kafka快速入门](http://colobu.com/2014/08/06/kafka-quickstart/)
+
+[Kafka 0.9.0 Documentation](http://kafka.apache.org/090/documentation.html#quickstart)
