feat:update spring boot md file

--- a/_posts/2017-12-07-流水号生成器.md
+++ b/_posts/2017-12-07-流水号生成器.md
@@ -26,4 +26,18 @@ tags:
 - 支持批量读取
 - 支持不同格式的表现
 
+# 生成策略
+#### 无序的流水号
+- 通过 uuid 生成
 
+#### 有序的流水号
+- 通过系统的纳秒生成
+- 通过设定的模板(如0000)自动递增生成：0001,0002,0003
+
+#### 有序并且带日期格式的流水号
+- 根据按年/月/日循环自动递增生成:201801010001，201801010002.201801010003，201801020001，201801020002
+
+#### 流水号生成后支持重新包装
+- 提供后置处理器对生成的流水号二次加工:例如在学生编号前面拼接上其所属导师的编号，TH0001-STD0001，TH0001-STD0002，TH0001-STD0003
+
+# 实现
