feat:update serialNo Generator md file

--- a/_posts/2017-12-07-流水号生成器.md
+++ b/_posts/2017-12-07-流水号生成器.md
@@ -41,3 +41,29 @@ tags:
 - 提供后置处理器对生成的流水号二次加工:例如在学生编号前面拼接上其所属导师的编号，TH0001-STD0001，TH0001-STD0002，TH0001-STD0003
 
 # 实现
+#### 流水号选择器
+流水号选择器是用于根据配置的参数，利用 Spring bean 的自动装配功能，获取对应的流水号生成器（SerialNoGenerator）。
+其中核心代码如下：
+```
+public SerialNoGenerator find(String generatorId) {
+        String beanName = generatorMap.get(generatorId);
+        SerialNoGenerator generator = null;
+        if (StringUtils.isNotBlank(beanName)) {
+            generator = ApplicationContextHolder.getBean(beanName, SerialNoGenerator.class);
+        }
+        if (generator == null) {
+            generator = ApplicationContextHolder.getBean("DEFAULT", SerialNoGenerator.class);
+        }
+        return generator;
+    }
+```
+
+generatorMap 是 Spring boot 配置文件映射出来的 ConfigurationProperties，配置文件 application.yaml 内容如下：
+```
+generator-map:
+    "table1.column1": "DEFAULT"
+    "table2.column2": "UUID"
+    "table3.column3": "WITH_DATE_YMD_CYCLE_BY_YMD"
+```
+
+#### 流水号生成器
