feat:update serialNo Generator md file

--- a/_posts/2017-12-07-流水号生成器.md
+++ b/_posts/2017-12-07-流水号生成器.md
@@ -27,32 +27,35 @@ tags:
 - 支持不同格式的表现
 
 # 生成策略
-#### 无序的流水号
+## 无序的流水号
 - 通过 uuid 生成
 
-#### 有序的流水号
+## 有序的流水号
 - 通过系统的纳秒生成
 - 通过设定的模板(如0000)自动递增生成：0001,0002,0003
 
-#### 有序并且带日期格式的流水号
+## 有序并且带日期格式的流水号
 - 根据按年/月/日循环自动递增生成:201801010001，201801010002.201801010003，201801020001，201801020002
 
-#### 流水号生成后支持重新包装
+## 流水号生成后支持重新包装
 - 提供后置处理器对生成的流水号二次加工:例如在学生编号前面拼接上其所属导师的编号，TH0001-STD0001，TH0001-STD0002，TH0001-STD0003
 
 # 实现
-#### 流水号选择器
+## 流水号选择器
 流水号选择器是用于根据配置的参数，利用 Spring bean 的自动装配功能，获取对应的流水号生成器（SerialNoGenerator）。
 其中核心代码如下：
 ```
+@Autowired
+ApplicationContext appContext;
+    
 public SerialNoGenerator find(String generatorId) {
         String beanName = generatorMap.get(generatorId);
         SerialNoGenerator generator = null;
         if (StringUtils.isNotBlank(beanName)) {
-            generator = ApplicationContextHolder.getBean(beanName, SerialNoGenerator.class);
+            generator = appContext.getBean(beanName, SerialNoGenerator.class);
         }
         if (generator == null) {
-            generator = ApplicationContextHolder.getBean("DEFAULT", SerialNoGenerator.class);
+            generator = appContext.getBean("DEFAULT", SerialNoGenerator.class);
         }
         return generator;
     }
@@ -66,4 +69,31 @@ generator-map:
     "table3.column3": "WITH_DATE_YMD_CYCLE_BY_YMD"
 ```
 
-#### 流水号生成器
+## 流水号生成器
+定义接口，其中有四个方法：包括获取一个、获取一个带回调、获取一批、获取一批带回调
+```
+public interface SerialNoGenerator<T> {
+    T next(String generatorId);
+
+    T next(String generatorId, Object object, SerialNoFormatter formatter);
+
+    T[] nextBatch(String generatorId, int count);
+
+    T[] nextBatch(String generatorId, int count, Object object, SerialNoFormatter formatter);
+}
+```
+
+其中 SerialNoFormatter 是一个接口类，具体实现按需添加：
+```
+public interface SerialNoFormatter {
+    String formatter(String serialNo, Object object);
+}
+```
+
+#### 流水号生成器分类
+
+
+
+
+
+
